@@ -22,7 +22,8 @@ dist-win: freepops-$(VERSION).tar.gz
 		tar -xzf freepops-$(VERSION).tar.gz -C _win_
 	$(H)cd _win_/freepops-$(VERSION);\
 		./configure.sh win;\
-		make all;
+		make all;\
+		make doc;
 	$(H)cp _win_/freepops-$(VERSION)/src/freepopsd.exe _win_/freepops
 	$(H)cp _win_/freepops-$(VERSION)/modules/lib/libpthread.dll \
 		_win_/freepops
@@ -83,7 +84,7 @@ dist-gen:
 		../dist-gen/freepops-$(VERSION).ebuild.gz
 
 dist-deb: freepops-$(VERSION).tar.gz
-	$(H)mkdir -p _deb_/freepops
+	$(H)mkdir -p _deb_
 	$(H)[ -d _deb_/freepops-$(VERSION) ] || \
 		tar -xzf freepops-$(VERSION).tar.gz -C _deb_
 	$(H)cd _deb_/freepops-$(VERSION);\
