@@ -1,3 +1,4 @@
+- added freepops-doc debian package
 - fixed last cygwin issue
 - fixed gmail TOP
 - fixed cygwin build target (partially)
